@@ -28,13 +28,14 @@ enum ssort_mode {
   SORT_SERVER_PING,
   SORT_SERVER_TO,
   SORT_SERVER_PRIVATE,
+  SORT_SERVER_ANTICHEAT,
   SORT_SERVER_PLAYERS,
+  SORT_SERVER_MAXPLAYERS,
   SORT_SERVER_MAP,
   SORT_SERVER_GAME,
   SORT_SERVER_GAMETYPE,
-#ifdef USE_GEOIP
   SORT_SERVER_COUNTRY,
-#endif
+  SORT_SERVER_TYPE,
 };
 
 enum psort_mode {
